
2023-04-15 Simson Garfinkel <simsong@acm.org>
	* fixed typo in src/scan_aes.cpp that caused buffer overrun error
	* Updated to 2.0.5

2023-04-15 Simson Garfinkel <simsong@acm.org>
	* Updated to 2.0.4

2023-04-07 Simson Garfinkel <simsong@acm.org>
	* Updated to 2.0.3
	* Created distribution

2023-02-25 Simson Garfinkel <simsong@acm.org>
	* Compiles on Fedora 36 for windows
	* Updated to 2.0.2

2021-10-18 Simson Garfinkel
	* Removed plugins directory
	* Updated to 2.0.0-beta1

2020-06-20 simson garfinkel
	* Removed Java GUI

2020-06-14  fedora Cloud User  <fedora@ip-172-30-4-244.ec2.internal>

	* src/threadpool.cpp: numCPU() now simply calls std::thread::hardware_concurrency(). Perhaps more should be replaced over time, but it would be super-exciting to see the threadpool be able to spin of threads onto other servers, which was the original intent.

2020-06-13  Simson Garfinkel <simsong@acm.org>
	* updated license to MIT License, copyright Simson L. Garfinkel, consistent with the fact that this is no longer an official US Government work product.

2019-11-10  Simson Garfinkel  <simsong@acm.org>

	* tests/data_check.txt: updated offset for JAVA.EXE
	sadly, Data/WindowsXPPrefetch_JAVA.exe.pdf was removed because it seems that the file was not in the git repo.

	* src/scan_wordlist.cpp (scan_wordlist): changed sbuf.buf[i] to sbuf.get8u(i) to eliminate crash.
	(scan_wordlist): cleaned up state machine. (The above fix made it clear there was a state machine error.)

	* configure.ac: increased version number to 1.6.0 to celebrate the new scanners

	* src/scan_utmp.cpp: added scanner

	* src/scan_ntfsmft.cpp: added scanner

	* src/scan_ntfslogfile.cpp: added scanner

	* src/scan_ntfsindx.cpp: added scanner

	* src/scan_evtx.cpp: added scanner

2019-11-09 Overall <simsong@acm.org>

	* ChangeLog - cleaned up for current release. Incremented version number to 1.5.6

2014-08-20  Basic  <simsong@r4.ncr.nps.edu>
